// Vitest Snapshot v1

exports[`Loading > Loading attachVue demo works fine 1`] = `
<t-space
  data-v-5d1ead0d=""
  direction="vertical"
>
  <div
    class="loading-attach-demo__title"
    data-v-5d1ead0d=""
    id="alice"
  >
    Hello, I'm Alice. I'm going to be a front-end developer.
  </div>
  <t-loading
    attach="#alice"
    data-v-5d1ead0d=""
    loading="true"
    size="small"
  />
  <t-switch
    customvalue="true,false"
    data-v-5d1ead0d=""
    label="显示,隐藏"
  />
</t-space>
`;

exports[`Loading > Loading baseVue demo works fine 1`] = `
<t-space>
  <t-loading />
</t-space>
`;

exports[`Loading > Loading delayVue demo works fine 1`] = `
<t-space
  direction="vertical"
>
  <t-space>
    <t-loading
      delay="500"
      size="small"
    />
    <!---->
  </t-space>
  <div>
    <t-loading
      delay="500"
      loading="true"
      showoverlay=""
      size="small"
    >
      <div>
        
      </div>
    </t-loading>
  </div>
  <t-space>
    <t-button
      size="small"
    >
      快速重新加载数据（无loading）
    </t-button>
    <t-button
      size="small"
    >
      慢速重新加载数据
    </t-button>
  </t-space>
</t-space>
`;

exports[`Loading > Loading fullscreenVue demo works fine 1`] = `
<t-space>
  <t-loading
    fullscreen=""
    text="加载中..."
  />
  <div>
     全局加载开关（开启加载1秒后自动归位）： 
    <t-switch />
  </div>
</t-space>
`;

exports[`Loading > Loading iconTextVue demo works fine 1`] = `
<t-space>
  <t-loading
    size="small"
    text="加载中..."
  />
</t-space>
`;

exports[`Loading > Loading serviceVue demo works fine 1`] = `
<t-space
  data-v-0331361d=""
  direction="vertical"
>
  <div
    class="loading-service-demo"
    data-v-0331361d=""
    id="loading-service-demo"
  >
    Loading 挂载容器
  </div>
  <p
    data-v-0331361d=""
  >
    this.$loading({ attach: '#loading-service-demo', showOverlay: true })
  </p>
  <p
    data-v-0331361d=""
  >
    this.$loading(true)
  </p>
  <p
    data-v-0331361d=""
  >
    this.$loading({ fullscreen: true, attach: 'body', preventScrollThrough: false })
  </p>
  <t-space
    data-v-0331361d=""
  >
    <t-button
      data-v-0331361d=""
      size="small"
    >
      插件方式加载（局部）
    </t-button>
    <t-button
      data-v-0331361d=""
      size="small"
    >
      插件方式加载（全屏）
    </t-button>
    <t-button
      data-v-0331361d=""
      size="small"
    >
      插件方式加载（全屏-滚动穿透）
    </t-button>
  </t-space>
  <p
    data-v-0331361d=""
  >
    LoadingPlugin({ attach: '#loading-service-demo', showOverlay: true })
  </p>
  <p
    data-v-0331361d=""
  >
    LoadingPlugin(true)
  </p>
  <p
    data-v-0331361d=""
  >
    LoadingPlugin({ fullscreen: true, attach: 'body', preventScrollThrough: false })
  </p>
  <t-space
    data-v-0331361d=""
  >
    <t-button
      data-v-0331361d=""
      size="small"
    >
      函数方式加载（局部）
    </t-button>
    <t-button
      data-v-0331361d=""
      size="small"
    >
      函数方式加载（全屏）
    </t-button>
    <t-button
      data-v-0331361d=""
      size="small"
    >
      函数方式加载（全屏-滚动穿透）
    </t-button>
  </t-space>
</t-space>
`;

exports[`Loading > Loading sizeVue demo works fine 1`] = `
<t-space
  direction="vertical"
  size="large"
>
  <div>
    <t-loading
      size="small"
      text="加载中(小)..."
    />
  </div>
  <div>
    <t-loading
      size="26px"
      text="加载中(size=26px)..."
    />
  </div>
  <div>
    <t-loading
      size="medium"
      text="加载中(中)..."
    />
  </div>
  <div>
    <t-loading
      style="font-size: 46px;"
      text="加载中(样式定义)..."
    />
  </div>
  <div>
    <t-loading
      size="large"
      text="加载中(大)..."
    />
  </div>
</t-space>
`;

exports[`Loading > Loading textVue demo works fine 1`] = `
<t-space
  size="100"
>
  <t-loading
    text="静态文字加载中..."
  />
  <t-loading
    text="function () { [native code] }"
  />
  <t-loading />
</t-space>
`;

exports[`Loading > Loading wrapVue demo works fine 1`] = `
<t-space
  data-v-4fca1edc=""
  direction="vertical"
  size="large"
>
  <t-space
    data-v-4fca1edc=""
  >
    <t-loading
      data-v-4fca1edc=""
      loading="true"
      showoverlay=""
      size="small"
    >
      <div
        data-v-4fca1edc=""
      >
        this is loading component
      </div>
      <div
        data-v-4fca1edc=""
      >
        this is loading component
      </div>
      <div
        data-v-4fca1edc=""
      >
        this is loading component
      </div>
      <div
        data-v-4fca1edc=""
      >
        this is loading component
      </div>
      <div
        data-v-4fca1edc=""
      >
        this is loading component
      </div>
    </t-loading>
  </t-space>
  <t-space
    data-v-4fca1edc=""
    size="24"
  >
    <t-button
      data-v-4fca1edc=""
      size="small"
    >
      加载中
    </t-button>
    <t-button
      data-v-4fca1edc=""
      size="small"
    >
      加载完成
    </t-button>
  </t-space>
</t-space>
`;
